--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       <div class="row">
         <div class="col-md-7">
           <!-- <iframe src="http://localhost:3000/embeds/223" allowfullscreen frameborder="0" width="100%"></iframe> -->
-          <iframe src="http://localhost:3000/embeds/223" allowfullscreen frameborder="0" height="315" width="560"></iframe>
+          <div class="embed-responsive embed-responsive-16by9">
+            <iframe src="http://localhost:3000/embeds/20" scrolling="no" allowfullscreen frameborder="0" height="315" width="560"></iframe>
+          </div>
         </div>
         <div class="col-md-5">
           <h3>Project One</h3>
@@ -92,7 +94,7 @@
       <!-- Project Three -->
       <div class="row">
         <div class="col-md-7">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/k08WxxyEQc4" frameborder="0" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/k08WxxyEQc4" frameborder="0" allowfullscreen scrolling="no"></iframe>
         </div>
         <div class="col-md-5">
           <h3>Project Three</h3>
